--- a/DocumentiEsterni/Verbali/Verbale_E_2020_12_18/src/Comandi.tex
+++ b/DocumentiEsterni/Verbali/Verbale_E_2020_12_18/src/Comandi.tex
@@ -12,4 +12,4 @@
 
 \newcommand{\Uso}{Esterno}
 
-\newcommand{\DescrizioneDoc}{Riassunto dell'incontro del gruppo \textit{Sweleven} con tenutosi in data 18-12-2020.}
+\newcommand{\DescrizioneDoc}{Riassunto dell'incontro del gruppo \textit{Sweleven} con il proponente, tenutosi in data 18-12-2020.}
