--- a/DocumentiInterni/Verbali/Verbale_2020_12_11/src/RegistroModifiche.tex
+++ b/DocumentiInterni/Verbali/Verbale_2020_12_11/src/RegistroModifiche.tex
@@ -13,8 +13,8 @@
         % usare \responsabile per indicare responsabile
 
         %		L'ultimo evento deve essere sempre all'inizio della tabella
-        X.X.X                  & XXXX-XX-XX                                       & Responsabile                                & TODO & \responsabile{} \\
-        X.X.X                  & XXXX-XX-XX                                       & Verifica                                    & TODO & \verificatore{} \\
-        0.0.1                  & 2020-12-17 & Stesura documento & Abdelwahad kandoul & \redattore{}    \\
+        1.0.0                  & 2020-12-28                                       & Approvazione                                & Elvis Murtezan & \responsabile{} \\
+        0.1.0                  & 2020-12-23                                       & Verifica                                    & Giovanni Grigoletto & \verificatore{} \\
+        0.0.1                  & 2020-12-17 & Stesura verbale & Abdelwahad kandoul & \redattore{}    \\
     \end{longtable}
 }
