--- a/DocumentiInterni/Verbali/Verbale_I_2020-10-31/src/Comandi.tex
+++ b/DocumentiInterni/Verbali/Verbale_I_2020-10-31/src/Comandi.tex
@@ -1,4 +1,4 @@
-\newcommand{\Titolo}{Verbale interno del 31-10-2020}
+\newcommand{\Titolo}{Verbale interno del 2020-10-31}
 
 \newcommand{\Approvatore}{Elvis Murtezan}
 \newcommand{\Redattori}{Alessio Trevisan}
@@ -12,4 +12,4 @@
 
 \newcommand{\Uso}{Interno}
 
-\newcommand{\DescrizioneDoc}{Riassunto dell'incontro del gruppo \textit{Sweleven} tenutosi il 31-10-2020}
+\newcommand{\DescrizioneDoc}{Riassunto dell'incontro del gruppo \textit{Sweleven} tenutosi il 2020-10-31.}
