--- a/DocumentiInterni/Verbali/Verbale_I_2020-12-22/src/DettaglioRiunione/main.tex
+++ b/DocumentiInterni/Verbali/Verbale_I_2020-12-22/src/DettaglioRiunione/main.tex
@@ -1,15 +1,15 @@
 Si è aperta la riunione facendo notare come i files degli studi di fattibilità non siano stati suddivisi per paragrafi,
 ma solamente lasciando un unico main.tex con tutto il testo Latex.
 
-La discussione si è poi centrata sul fatto che Alessio ha utilizzato uno stile diverso da Edoardo e Filippo nella stesura
-del suo documento, rendendolo poco uniforme e professionale. Alessio ha quindi sottolineato la sua osservanza degli ISO, che l'hanno spinto ad un risultato così diverso. 
+La discussione si è poi centrata sul fatto che Alessio ha utilizzato uno stile diverso da Edoardo Caregnato e Filippo Pinton nella stesura
+del suo documento, rendendolo poco uniforme e professionale. Alessio Trevisan ha quindi sottolineato la sua osservanza degli ISO, che l'hanno spinto ad un risultato così diverso. 
 Si è quindi deciso che dopo la conclusione di tutte le revisioni si debba fare un controllo degli stili utilizzati, per avere documenti uniformi, e si dovrà decidere uno standard da adottare in futuro.
 
-È poi stato fatto notare il fatto che il gruppo Andrea-Elvis-Giovanni, incaricato della verifica delle norme di progetto, non ha inserito i commenti
+È poi stato fatto notare il fatto che il gruppo Andrea De Tomasi - Elvis Murtezan - Giovanni Grigoletto, incaricato della verifica delle norme di progetto, non ha inserito i commenti
 sulla Pull Request nella piattaforma GitHub, in modo da procedere con la verifica e la modifica delle parti errate del documento.
 
-È stata successivamente fatta una nota ad Edoardo per aver segnato come verificato il documento a lui assegnato per la verifica, quando invece doveva essere
-ancora modificato dopo le segnalazioni di errori. Filippo ha quindi provveduto a spiegare come si devono eseguire le modifiche dei documenti validati in attesa di modifiche.
+È stata successivamente fatta una nota ad Edoardo Caregnato per aver segnato come verificato il documento a lui assegnato per la verifica, quando invece doveva essere
+ancora modificato dopo le segnalazioni di errori. E' stato quindi spiegato come si devono eseguire le modifiche dei documenti validati in attesa di modifiche.
 
 Infine si è discusso di come si effettuerà la rotazione dei ruoli di stesura, verificazione, approvazione dei documenti, e si è stabilito che ci sarà un responsabile
 fisso per ogni periodo di tempo tra due revisioni. In questo modo si avrà una rotazione puù efficiente dei ruoli.
