--- a/DocumentiInterni/Verbali/Verbale_I_2021-01-05/src/Informazioni/src/OrdineDelGiorno/main.tex
+++ b/DocumentiInterni/Verbali/Verbale_I_2021-01-05/src/Informazioni/src/OrdineDelGiorno/main.tex
@@ -1,4 +1,4 @@
 \begin{enumerate}
-    \item Valutazione stato Deliverables
-    \item Eventuali perplessità riscontrate
+    \item Valutazione stato Deliverables;
+    \item Eventuali perplessità riscontrate.
 \end{enumerate}
