--- a/DocumentiInterni/Verbali/Verbale_I_2021-01-05/src/RegistroModifiche.tex
+++ b/DocumentiInterni/Verbali/Verbale_I_2021-01-05/src/RegistroModifiche.tex
@@ -13,8 +13,8 @@
         % usare \responsabile per indicare responsabile
 
         %		L'ultimo evento deve essere sempre all'inizio della tabella
-        1.0.0                  & 2021-01-08                                       & Responsabile                                & Giovanni Grigoletto & \responsabile{} \\
+        1.0.0                  & 2021-01-08                                       & Approvazione                                & Giovanni Grigoletto & \responsabile{} \\
         0.1.0                  & 2021-01-08                                       & Verifica                                    & Edoardo Caregnato & \verificatore{} \\
-        0.0.1                  & 2021-01-06                                       & Descrizione                            & Elvis Murtezan & \redattore{}    \\
+        0.0.1                  & 2021-01-06                                       & Stesura verbale                           & Elvis Murtezan & \redattore{}    \\
     \end{longtable}
 }
