--- a/DocumentiInterni/Verbali/Verbale_I_2021-01-05/src/TracciamentoDecisioni/main.tex
+++ b/DocumentiInterni/Verbali/Verbale_I_2021-01-05/src/TracciamentoDecisioni/main.tex
@@ -1,4 +1,4 @@
 \begin{enumerate}
     \item contattare azienda per un eventuale prestito di hardware RFID;
-    \item finire validazione deliverables mancanti entro la data: 8/1/2021.
+    \item finire validazione deliverables mancanti entro la data: 2021-01-08.
 \end{enumerate}
