--- a/DocumentiEsterni/Verbali/Verbale_E_2020_12_18/src/RegistroModifiche.tex
+++ b/DocumentiEsterni/Verbali/Verbale_E_2020_12_18/src/RegistroModifiche.tex
@@ -15,6 +15,6 @@
         %		L'ultimo evento deve essere sempre all'inizio della tabella
         1.0.0                  & 2021-01-08                                       & Responsabile                                & Elvis Murtezan & \responsabile{} \\
         0.1.0                  & 2021-01-08                                      & Verifica                                    & Filippo Pinton & \verificatore{} \\
-        0.0.1                  & 2020-12-19                                       & Descrizione edit                            & Caregnato Edoardo & \redattore{}    \\
+        0.0.1                  & 2020-12-19                                       & Stesura verbale                            & Caregnato Edoardo & \redattore{}    \\
     \end{longtable}
 }
