--- a/DocumentiInterni/Verbali/Verbale_2020_12_11/src/Comandi.tex
+++ b/DocumentiInterni/Verbali/Verbale_2020_12_11/src/Comandi.tex
@@ -1,8 +1,8 @@
-\newcommand{\Titolo}{Verbale interno del DATA}
+\newcommand{\Titolo}{Verbale interno del 2020-12-11}
 
-\newcommand{\Approvatore}{}
-\newcommand{\Redattori}{}
-\newcommand{\Verificatori}{}
+\newcommand{\Approvatore}{Elvis Murtezan}
+\newcommand{\Redattori}{Abdelwahad Kandoul}
+\newcommand{\Verificatori}{Giovanni Grigoletto}
 
 \newcommand{\pathimg}{../../../Shared/logo.png}
 
@@ -12,4 +12,4 @@
 
 \newcommand{\Uso}{Interno}
 
-\newcommand{\DescrizioneDoc}{Riassunto dell'incontro del gruppo \textit{Sweleven} con \textit{XXX} tenutosi il 2020-12-11.}
+\newcommand{\DescrizioneDoc}{Riassunto dell'incontro del gruppo \textit{Sweleven} con il proponente tenutosi il 2020-12-11.}
