--- a/DocumentiInterni/Verbali/Verbale_I_2021-01-05/src/Comandi.tex
+++ b/DocumentiInterni/Verbali/Verbale_I_2021-01-05/src/Comandi.tex
@@ -1,4 +1,4 @@
-\newcommand{\Titolo}{Verbale interno del 05-01-2021}
+\newcommand{\Titolo}{Verbale interno del 2021-01-05}
 
 \newcommand{\Approvatore}{Giovanni Grigoletto}
 \newcommand{\Redattori}{Elvis Murtezan}
@@ -12,4 +12,4 @@
 
 \newcommand{\Uso}{Interno}
 
-\newcommand{\DescrizioneDoc}{Riassunto dell'incontro del gruppo \textit{Sweleven} tenutosi il giorno 05-01-2021}
+\newcommand{\DescrizioneDoc}{Riassunto dell'incontro del gruppo \textit{Sweleven} tenutosi il giorno 2021-01-05.}
