aggiunto qualche parola al glossario

--- a/DocumentiEsterni/Glossario/src/Alfabeto/A.tex
+++ b/DocumentiEsterni/Glossario/src/Alfabeto/A.tex
@@ -27,8 +27,17 @@ dall'utente.}
 \TermineGlossario{Android}
 \DefinizioneGlossario{Android è un sistema operativo per dispositivi mobili sviluppato da Google, progettato principalmente per sistemi embedded quali smartphone e tablet, con interfacce utente specializzate per televisori, automobili, orologi da polso, occhiali, e altri.E' basato sul kernel Linux.}
 
+\TermineGlossario{Apache tomcat}
+\DefinizioneGlossario{Server web (nella forma di contenitore servlet) open source sviluppato dalla Apache Software Foundation. Implementa le specifiche JavaServer Pages (JSP) e servlet, fornendo quindi una piattaforma software per l'esecuzione di applicazioni web sviluppate in linguaggio Java.}
+
 \TermineGlossario{API (Application programming interface)}
 \DefinizioneGlossario{L'interfaccia di programmazione delle applicazioni sono set di definizioni e protocolli con i quali vengono realizzati ed integrati software applicativi. Consentono ai  prodotti o servizi di comunicare con altri prodotti o servizi senza sapere come vengono implementati, semplificando così lo sviluppo delle applicazioni.}
+
+\TermineGlossario{API REST}
+\DefinizioneGlossario{Nota anche come API RESTful, è un'interfaccia di programmazione delle applicazioni conforme ai vincoli dell'architettura REST. REST è l'acronimo di REpresentational State Transfer}
+
+\TermineGlossario{API gateway}
+\DefinizioneGlossario{Strumento che permette d’intermediare i servizi ( o microservizi) ed esporli in maniera strutturata verso l’esterno.}
 
 \TermineGlossario{Applicazione web}
 \DefinizioneGlossario{Una applicazione distribuita web-based cioè fruibile via web per mezzo di un network, come Internet, che offre determinati servizi all'utente che la utilizza. Le applicazioni web a differenza delle altre applicazioni non necessitano di venire installate.}
