--- a/DocumentiEsterni/Glossario/src/Alfabeto/D.tex
+++ b/DocumentiEsterni/Glossario/src/Alfabeto/D.tex
@@ -1,4 +1,7 @@
 \section{D}
+\TermineGlossario{D3.js}
+\DefinizioneGlossario{Libreria JavaScript per creare visualizzazioni dinamiche ed interattive partendo da dati organizzati, visibili attraverso un comune browser. Per fare ciò si serve largamente degli standard web: SVG, HTML5, e CSS. }
+
 \TermineGlossario{Dashboard}
 \DefinizioneGlossario{È un tipo di interfaccia utente grafica che mostra informazioni generiche ed è caratterizzata dalla facilità di lettura ed immediatezza, consentendo al management di agire tempestivamente prendendo decisioni corrette.}
 
@@ -22,4 +25,8 @@
 
 \TermineGlossario{DynamoDB}
 \DefinizioneGlossario{è uno dei servizi di AWS completamente gestito ovvero, è un database non relazionale che supporta i modelli di dati,di tipo documento e di tipo chiave-valore che offre prestazioni di pochi millisecondi a qualsiasi scala}
+
+\TermineGlossario{Draw.oi}
+\DefinizioneGlossario{Piattaforma che permette di creare diagrammi direttamente dal proprio browser Web, senza dover utilizzare software o app.}
+
 \clearpage
