--- a/DocumentiEsterni/Glossario/src/Alfabeto/F.tex
+++ b/DocumentiEsterni/Glossario/src/Alfabeto/F.tex
@@ -11,6 +11,9 @@
 \TermineGlossario{Framework}
 \DefinizioneGlossario{Insieme integrato di componenti software prefabbricate che offrono uno schema di soluzione preconfezionato per un determinato tipo di problema.}
 
+\TermineGlossario{Frontend}
+\DefinizioneGlossario{Insieme delle applicazioni e dei programmi informatici con cui l'utente interagisce direttamente (contrapposto a backend ).}
+
 \TermineGlossario{Function as a Service (FaaS)}
 \DefinizioneGlossario{È una categoria di servizi di cloud computing che fornisce una piattaforma che consente ai clienti di sviluppare, eseguire e gestire le funzionalità delle applicazioni senza la complessità di creare e mantenere l'infrastruttura tipicamente associata allo sviluppo e al lancio di un'applicazione.}
 
