--- a/DocumentiEsterni/Glossario/src/Alfabeto/M.tex
+++ b/DocumentiEsterni/Glossario/src/Alfabeto/M.tex
@@ -17,6 +17,9 @@
 \TermineGlossario{Modalità di tracciamento autenticato}
 \DefinizioneGlossario{È una specifica progettuale che da la possibilità all’utente che usufruisce dell’applicazione di essere tracciato all'interno dei luoghi dell'organizzazione. Questa modalità riconosce l'identità fisica dell'utente tracciato (nome, cognome e altri dati personali reali).}
 
+\TermineGlossario{Model-View-Controller}
+\DefinizioneGlossario{ pattern architetturale molto diffuso nello sviluppo di sistemi software, in particolare nell'ambito della programmazione orientata agli oggetti e in applicazioni web, in grado di separare la logica di presentazione dei dati dalla logica di business.[1] Questo pattern si posiziona nel livello logico o di business e di presentazione in una architettura multi-tier.}
+
 \TermineGlossario{Modificabilità}
 \DefinizioneGlossario{Capacità di un prodotto software di consentire lo sviluppo di modifiche al software originale. L'implementazione include modifiche al codice, alla progettazione e alla documentazione.}
 
@@ -28,5 +31,8 @@
 
 \TermineGlossario{MySQL}
 \DefinizioneGlossario{È un database relazionale open source composto da un client a riga di comando e un server. Supporta linguaggi come Java, PHP, Python, ecc.}
+
+\TermineGlossario{MVC}
+\DefinizioneGlossario{Vedere Model-View-Controller.}
 
 \clearpage
