--- a/DocumentiEsterni/Glossario/src/Alfabeto/N.tex
+++ b/DocumentiEsterni/Glossario/src/Alfabeto/N.tex
@@ -9,6 +9,9 @@ Consiste in un client da linea di comando, chiamato anch'esso npm e un database 
 \TermineGlossario{NFC(near-field communication}
 \DefinizioneGlossario{è una tecnologia di ricetrasmissione che fornisce connettività senza fili (RF) bidirezionale a distanza (contactless) a corto raggio (fino a un massimo di 10 cm), sviluppata congiuntamente da Philips, LG, Sony, Samsung e Nokia.La tecnologia NFC si è evoluta da una combinazione d'identificazione senza contatto o RFID e altre tecnologie di connettività. Contrariamente ai più semplici dispositivi RFID, NFC permette una comunicazione bidirezionale}
 
+\TermineGlossario{Next.js}
+\DefinizioneGlossario{framework JavaScript back-end per applicazioni React, e consente il rendering automatico lato server (SSR, server side rendering). Con Next.js si possono sviluppare applicazioni web, app mobile, desktop e web app progressive.}
+
 \TermineGlossario{Node.js}
 \DefinizioneGlossario{È una runtime di JavaScript open source multipiattaforma orientato agli eventi (rende possibile l’I/O asincrono) per l'esecuzione di codice JavaScript.}
 
