--- a/DocumentiEsterni/Glossario/src/Alfabeto/O.tex
+++ b/DocumentiEsterni/Glossario/src/Alfabeto/O.tex
@@ -4,6 +4,9 @@
 \DefinizioneGlossario{È un formato di descrizione delle API per le API REST. Un file OpenAPI ti consente di descrivere l'intera API, tra cui: endpoint disponibili e operazioni su ciascun endpoint (GET / utenti, POST / utenti), parametri operativi ingresso e uscita per ogni operazione, metodi di autenticazione, informazioni di contatto, licenza, condizioni d'uso e altre informazioni.
 Le specifiche API possono essere scritte in YAML o JSON.}
 
+\TermineGlossario{Openshift}
+\DefinizioneGlossario{Costruito a partire da Kubernetes ma sfrutta diversi altri progetti e tecnologie open source (come Source 2 Image, la tecnologia che permette di passare dal codice sorgente di un'applicazione all'applicazione containerizzata, o Jenkins, un popolarissimo server di CI/CD).}
+
 \TermineGlossario{Operabilità}
 \DefinizioneGlossario{Capacità di un prodotto software di offrire delle funzioni coerenti con le aspettative dell’utente.}
 
