--- a/DocumentiEsterni/Glossario/src/Alfabeto/P.tex
+++ b/DocumentiEsterni/Glossario/src/Alfabeto/P.tex
@@ -1,4 +1,7 @@
 \section{P}
+\TermineGlossario{PDCA)}
+\DefinizioneGlossario{Vedere ciclo di Deming}
+
 \TermineGlossario{Platform as a Service (PAAS)}
 \DefinizioneGlossario{È un un servizio cloud tramite il quale un provider mette a disposizione un ambiente di sviluppo e degli appositi strumenti per ideare nuove applicazioni.}
 
