--- a/DocumentiEsterni/Glossario/src/Alfabeto/Q.tex
+++ b/DocumentiEsterni/Glossario/src/Alfabeto/Q.tex
@@ -7,4 +7,8 @@
 
 \TermineGlossario{Qualitativo}
 \DefinizioneGlossario{In relazione a un requisito esprime un vincolo sul prodotto misurando la sua qualità in maniera replicabile.}
+
+\TermineGlossario{Query}
+\DefinizioneGlossario{Interrogazione di un database per estrarre o aggiornare i dati che soddisfano un certo criterio di ricerca.}
+
 \clearpage 
