--- a/DocumentiEsterni/Glossario/src/Alfabeto/S.tex
+++ b/DocumentiEsterni/Glossario/src/Alfabeto/S.tex
@@ -36,6 +36,9 @@ Spring Batch. Questi progetti sono stati ideati per fornire funzionalità aggiun
 \TermineGlossario{Stakeholder}
 \DefinizioneGlossario{Sono le persone influenti per il prodotto: dicono se una certa opportunità è buona. Possono essere chi usa il prodotto, chi compra il prodotto, chi sostiene i costi di realizzazione, chi verifica le esecuzioni dei processi.}
 
+\TermineGlossario{StarUML}
+\DefinizioneGlossario{Strumento per la generazione automatica di codice Java a partire dalla sua rappresentazione UML; è possibile, inoltre, effettuare l'operazione inversa (reverse engineer) del codice Java sorgente per produrre il diagramma UML corrispondente.}
+
 \TermineGlossario{Stream}
 \DefinizioneGlossario{È un "canale" tra la sorgente e la destinazione attraverso il quale fluiscono i dati.}
 
