--- a/DocumentiEsterni/Glossario/src/Alfabeto/U.tex
+++ b/DocumentiEsterni/Glossario/src/Alfabeto/U.tex
@@ -1,4 +1,7 @@
 \section{U}
+\TermineGlossario{UML}
+\DefinizioneGlossario{Linguaggio di modellazione visivo comune, ricco sia nella semantica che nella sintassi, per l'architettura, la progettazione e l'implementazione di sistemi software complessi sia dal punto di vista strutturale che comportamentale. L'UML viene applicato anche in altri settore, oltre allo sviluppo di software, come il flusso di processo nella produzione.}
+
 \TermineGlossario{Unicode Transformation Format, 8 bit (UTF-8)}
 \DefinizioneGlossario{È una codifica che assegna a ogni carattere Unicode esistente una specifica sequenza di bit, che può essere letta anche come numero binario. Questo significa che UTF-8 assegna un numero binario fisso ad ogni lettera, numero e simbolo di un numero crescente di lingue.}
 
