--- a/DocumentiEsterni/Glossario/src/Alfabeto/C.tex
+++ b/DocumentiEsterni/Glossario/src/Alfabeto/C.tex
@@ -5,6 +5,9 @@
 \TermineGlossario{Cascading Style Sheets (CSS3)}
 \DefinizioneGlossario{È un linguaggio usato per definire la formattazione di documenti HTML, XHTML e XML ad esempio i siti web e relative pagine web; permette una programmazione più chiara e facile da utilizzare, sia per gli autori delle pagine stesse sia per gli utenti, garantendo anche il riutilizzo di codice e facilita la manutenzione. Le specifiche CSS3 sono costituite da sezioni separate dette "moduli" e hanno differenti stati di avanzamento e stabilità.}
 
+\TermineGlossario{Ciclo di Deming}
+\DefinizioneGlossario{Modello per il miglioramento continuo della qualità in un’ottica a lungo raggio, anche detto PDCA (Plan, Do, Check, Act).}
+
 \TermineGlossario{Clean architecture}
 \DefinizioneGlossario{È una filosofia di progettazione software che separa gli elementi di un progetto in livelli ad anello.}
 
@@ -14,6 +17,9 @@
 
 \TermineGlossario{Cloud}
 \DefinizioneGlossario{È uno spazio di archiviazione dove può essere accessibile in qualsiasi momento ed in ogni luogo utilizzando semplicemente una qualunque connessione ad Internet.}
+
+\TermineGlossario{Cloudwatch}
+\DefinizioneGlossario{Fornisce dati e analisi concrete per monitorare le applicazioni, rispondere ai cambiamenti di prestazioni a livello di sistema, ottimizzare l'utilizzo delle risorse e ottenere una visualizzazione unificata dello stato di integrità operativa.}
 
 \TermineGlossario{Cluster}
 \DefinizioneGlossario{È un insieme di computer connessi tra loro tramite una rete telematica con lo scopo di distribuire un'elaborazione molto complessa tra i vari computer, aumentando la potenza di calcolo del sistema e/o garantendo una maggiore disponibilità di servizio.}
@@ -37,5 +43,9 @@ come probabili indicazioni di un difetto di programmazione; in altre parole sono
 
 \TermineGlossario{Criptovaluta}
 \DefinizioneGlossario{È una rappresentazione digitale di valore basata sulla crittografia.}
+
+\TermineGlossario{Csv}
+\DefinizioneGlossario{Formato di file basato su file di testo utilizzato per l'importazione ed esportazione (ad esempio da fogli elettronici o database) di una tabella di dati.}
+
 
 \clearpage
