--- a/DocumentiEsterni/Glossario/src/Alfabeto/G.tex
+++ b/DocumentiEsterni/Glossario/src/Alfabeto/G.tex
@@ -28,4 +28,7 @@
 \DefinizioneGlossario{È un sistema open source di compilazione che viene utilizzato per la automate building, i testing, le distribuizioni, ecc. Ogni progetto Android ha 
 bisogno di un Gradle per generare un apk dai file .java e .xml .}
 
+\TermineGlossario{GRPC} 
+\DefinizioneGlossario{gRPC è un Framework RPC (Remote Procedure Call) a prestazioni elevate e indipendente dal linguaggio.}
+
 \clearpage
