--- a/DocumentiEsterni/PianoDiQualifica/src/SpecificaDeiTest/src/TestDiSistema/main.tex
+++ b/DocumentiEsterni/PianoDiQualifica/src/SpecificaDeiTest/src/TestDiSistema/main.tex
@@ -92,10 +92,10 @@ I testi di sistema hanno lo scopo di testare l’applicativo prodotto nella sua 
         \end{itemize}&
         NI\\
         TS2.2&
-        Il sistema deve marcare come sporca una postazione che e\`{e} stata occupata.\newline
+        Il sistema deve marcare come sporca una postazione che \`{e} stata occupata.\newline
         Quando viene occupata una postazione il sistema deve:
         \begin{itemize}
-            \item marcare la postazione come "sporca"
+            \item marcare la postazione come "sporca";
             \item rendere la postazione non prenotabile fin quando non risulter\`{a} "pulita".
         \end{itemize}&
         NI\\
