fix PdP e Lettera
fixato le ore parziali errate
aggiunte 4 ore
cambiato Codifica con Sviluppo
fixato preventivo finale
fix lettera + aggiunta logo
fix comando NomeProgetto

--- a/DocumentiEsterni/AnalisiDeiRequisiti/src/DescrizioneGenerale/main.tex
+++ b/DocumentiEsterni/AnalisiDeiRequisiti/src/DescrizioneGenerale/main.tex
@@ -1,5 +1,5 @@
 \subsection{Funzionalit\`{a} del prodotto}
-Il sistema \emph{BlockCovid} offir\`{a} le seguenti funzionalit\`{a}:
+Il sistema \emph{\NomeProgetto} offir\`{a} le seguenti funzionalit\`{a}:
 \begin{itemize}
     \item una piattaforma web accessibile solamente agli amministratori che permetta: di monitorare le postazioni occupate, prenotate, da pulire e pulite. Da qui \`{e} inoltre possibile esportare un report delle pulizie per ogni singola postazione o per stanza;
     \item una applicazione per smartphone che permetta di consultare la lista delle postazioni e di prenotare quelle libere, oltre che di segnalarne la pulizia.
