--- a/DocumentiEsterni/AnalisiDeiRequisiti/src/Introduzione/main.tex
+++ b/DocumentiEsterni/AnalisiDeiRequisiti/src/Introduzione/main.tex
@@ -1,5 +1,5 @@
 \subsection{Scopo del documento}
-Questo documento ha lo scopo di presentare un'analisi dei requisiti e dei casi d'uso individuati dagli analisti del gruppo \Gruppo{} per lo sviluppo del progetto \emph{BlockCovid}. La seguente analisi \'{e} frutto dello studio del documento di presentazione del progetto e dagli incontri tenuti con il proponente, Imola informatica S.p.A.
+Questo documento ha lo scopo di presentare un'analisi dei requisiti e dei casi d'uso individuati dagli analisti del gruppo \Gruppo{} per lo sviluppo del progetto \emph{\NomeProgetto}. La seguente analisi \'{e} frutto dello studio del documento di presentazione del progetto e dagli incontri tenuti con il proponente, Imola informatica S.p.A.
 
 \subsection{Obiettivo del prodotto}
 La pandemia COVID-19 sta ancora scuotendo la salute pubblica globale con un elevato numero di decessi e
