--- a/DocumentiEsterni/PianoDiProgetto/src/Pianificazione/main.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/Pianificazione/main.tex
@@ -22,10 +22,10 @@ Nella pianificazione vengono definiti tutti i passi necessari alla conclusione d
 \subsection{Fase di Progettazione: Stadio 4 - Concretizzazione del Proof of concept}\label{sec:Stadio4}
 \input{src/Pianificazione/src/Stadio4.tex}
     
-\subsection{Fase di Codifica: Stadio 5 - Sviluppo e rifinitura }\label{sec:Stadio5}
+\subsection{Fase di Sviluppo: Stadio 5 - Codifica e rifinitura }\label{sec:Stadio5}
 \input{src/Pianificazione/src/Stadio5.tex}
     
-\subsection{Fase di Codifica: Stadio 6 - Qualifica e testing}\label{sec:Stadio6}
+\subsection{Fase di Sviluppo: Stadio 6 - Qualifica e testing}\label{sec:Stadio6}
 \input{src/Pianificazione/src/Stadio6.tex}
     
 \subsection{Fase di Collaudo: Stadio 7 - Finalizzazione}\label{sec:Stadio7}
