--- a/DocumentiEsterni/PianoDiProgetto/src/Pianificazione/src/Stadio2.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/Pianificazione/src/Stadio2.tex
@@ -17,7 +17,7 @@ Svolte le attività preliminari, il gruppo si concentra più in dettaglio sull'a
                 \item redazione \AdR{}:
                 \begin{itemize}
                     \item studio e definizione dei casi d'uso;
-                    \item individuazione, classificazione e codifica dei \glo{requisiti} di progetto;
+                    \item individuazione, classificazione ed analisi dei \glo{requisiti} di progetto;
                     \item definizione delle modalità di \glo{tracciamento}.
                 \end{itemize}
                 \item redazione \PdQ{};
