--- a/DocumentiEsterni/PianoDiProgetto/src/Pianificazione/src/Stadio5.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/Pianificazione/src/Stadio5.tex
@@ -1,4 +1,4 @@
-Questo stadio è relativo in gran parte allo sviluppo del codice. In questa \glo{fase} principale di codifica ci si concentrerà non solo sugli aspetti prettamente funzionali, ma anche, e soprattuto, sui \glo{requisiti} di tipo \glo{prestazionale}. L'obiettivo principale è dunque raggiungere una versione più aggiornata, funzionante, rifinita e sufficientemente ottimizzata del prodotto.
+Questo stadio è relativo in gran parte allo sviluppo del codice. In questa \glo{fase} principale di sviluppo ci si concentrerà non solo sugli aspetti prettamente funzionali, ma anche, e soprattuto, sui \glo{requisiti} di tipo \glo{prestazionale}. L'obiettivo principale è dunque raggiungere una versione più aggiornata, funzionante, rifinita e sufficientemente ottimizzata del prodotto.
         
         \subsubsection{Periodo di svolgimento}
         8 marzo 2021 - 19 marzo 2021;
