--- a/DocumentiEsterni/PianoDiProgetto/src/Pianificazione/src/Strutturazione.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/Pianificazione/src/Strutturazione.tex
@@ -14,9 +14,9 @@ Qui sotto viene esposto sinteticamente lo schema generale, dove ogni stadio è c
         \item Stadio 4 - Concretizzazione del \glo{Proof of Concept};
     \end{itemize}
 
-    \item \textbf{Fase di Codifica}:
+    \item \textbf{Fase di Sviluppo}:
     \begin{itemize}  
-        \item Stadio 5 - Sviluppo e rifinitura;
+        \item Stadio 5 - Codifica e rifinitura;
         \item Stadio 6 - Qualifica e testing.
     \end{itemize}
 
