--- a/DocumentiEsterni/PianoDiProgetto/src/Preventivo/src/ConsuntivoAnalisi.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/Preventivo/src/ConsuntivoAnalisi.tex
@@ -42,5 +42,5 @@ La suddivisione a stadi di una fase permette di migliorare la produttività del 
 \end{itemize}
 L'esperienza maturata dai componenti del team verrà trasmessa ad altri membri del gruppo che devono ancora lavorare in quel ruolo, al fine di ridurre le ore di pianificazione oraria per ciascun ruolo nelle fasi successive.
 Questo fa presupporre che anche i futuri scostamenti siano abbastanza in linea con quello preventivato.
-Il costo effettivo di questa prima fase non ha influenza sul preventivo in quanto esso si basa solamente sui costi preventivati nelle fasi successive di Progettazione, Codifica, Collaudo.\\
+Il costo effettivo di questa prima fase non ha influenza sul preventivo in quanto esso si basa solamente sui costi preventivati nelle fasi successive di Progettazione, Sviluppo, Collaudo.\\
 Ciò non toglie che ragionando sugli scostamenti, il gruppo deve prestare qualche attenzione in più sulla pianificazione oraria, ma nel complesso il team pianifica e lavora bene.
