--- a/DocumentiEsterni/PianoDiProgetto/src/Preventivo/src/PreventivoFinale.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/Preventivo/src/PreventivoFinale.tex
@@ -1,5 +1,5 @@
 \subsection{Preventivo finale} 
-Nel preventivo riportiamo la spesa totale che il committente dovrà affrontare, derivata dal totale delle ore rendicontate e preventivate nelle fasi di Progettazione Architetturale, Progettazione di Dettaglio e Codifica, Validazione e Collaudo.
+Nel preventivo riportiamo la spesa totale che il committente dovrà affrontare, derivata dal totale delle ore rendicontate e preventivate nelle fasi di Progettazione, Sviluppo,Collaudo.
 
 \subsubsection{Divisione oraria complessiva} 
 La seguente tabella rappresenta la distribuzione oraria dei ruoli per ogni componente del gruppo:
@@ -21,13 +21,13 @@ La seguente tabella rappresenta la distribuzione oraria dei ruoli per ogni compo
 \endhead
 
 \AW{}                     &  10 & 5 & - & 30 & 27 & 32 & 104 \\
-\AT{}                     & 11 & 10 & 5 & 22 & 22 & 35 & 103 \\
-\AD{}                     & 10 & 10 & - & 14 & 34 & 34 & 105 \\
-\EC{}                     & 11 & 10 &  4 & 13 & 32 & 32 & 102 \\
-\EM{}                     & - & 8  &  5 & 17 & 40 & 32 & 102 \\
+\AT{}                     & 11 & 10 & 5 & 22 & 22 & 35 & 105 \\
+\AD{}                     & 10 & 10 & - & 14 & 34 & 34 & 102 \\
+\EC{}                     & 11 & 10 &  6 & 13 & 32 & 32 & 104 \\
+\EM{}                     & - & 8  &  7 & 17 & 40 & 32 & 104 \\
 \FP{}                     & 10 & 8  &  6 & 21 & 35 & 24 & 104 \\
-\GG{}                     &  - & 8  & 5 & 25 & 37 & 29 & 103 \\
-\textbf{Ore totali ruolo} & 52  & 59 & 25 & 142 & 227 & 218 & 723 \\
+\GG{}                     &  - & 8  & 5 & 25 & 37 & 29 & 104 \\
+\textbf{Ore totali ruolo} & 52  & 59 & 29 & 142 & 227 & 218 & 727 \\
 \end{longtable}
 }
 
@@ -47,7 +47,7 @@ Nella seguente tabella viene illustrato il monte ore risultante per ogni ruolo c
         
 Responsabile   &  52 & 1560 \\
 Amministratore &  59 & 1180 \\
-Analista       &  25 & 625 \\
+Analista       &  29 & 725 \\
 Progettista    &  142 & 3124 \\
 Programmatore  &  227 & 3405 \\
 Verificatore   &  218 & 3270 \\
@@ -75,7 +75,7 @@ Nel seguente areogramma viene rappresentata la distribuzione dei costi in percen
 		\pie[rotate = 180, color={blue, yellow, red, green, pink, orange}] {
 			7/Responsabile, % 52/723 %
 			8/Amministratore, % 59/723 %
-			4/Analista, % 25/723 %
+			4/Analista, % 29/723 %
 			20/Progettista, % 142/723 %
 			31/Programmatore, % 227/723 %
 			30/Verificatore % 218/723 %
@@ -96,10 +96,10 @@ Nella seguente tabella vengono riportati i costi complessivi delle varie fasi e 
 \textcolor{\secondaryColor}{\textbf{Costo \glo{fase} (in \euro{})}}\\	
 \endhead
 
-Progettazione Architetturale          &  4363 \\
-Progettazione di Dettaglio e Codifica & 6046  \\
-Validazione e Collaudo                &  2755 \\
-\textbf{Totale}                       &  13164 \\
+Progettazione  &  4463 \\
+Sviluppo & 6046  \\
+Collaudo &  2755 \\
+\textbf{Totale}  &  13264 \\
 
 \end{longtable}
 }
