--- a/Shared/Sweleven.sty
+++ b/Shared/Sweleven.sty
@@ -135,7 +135,7 @@
 \newcommand{\RQ}{Revisione di Qualifica}
 \newcommand{\RA}{Revisione di Accettazione}
 
-\newcommand{\NomeProgetto}{BlockCovid}
+\newcommand{\NomeProgetto}{BlockCOVID}
 
 \newcommand{\glo}[1]{\textit{#1}\ped{G}}
 
