--- a/DocumentiEsterni/PianoDiQualifica/src/ResocontoVerifica/src/Esiti_verifiche_automatizzate.tex
+++ b/DocumentiEsterni/PianoDiQualifica/src/ResocontoVerifica/src/Esiti_verifiche_automatizzate.tex
@@ -18,7 +18,8 @@ i documenti prodotti finora.
     \textit{Verbale Interno 2020-12-11 v1.0.0}          & 73                                    & Superato{} \\
     \textit{Verbale Interno 2020-12-22 v1.0.0}          & 71                                    & Superato{} \\
     \textit{Verbale Interno 2021-01-05 v1.0.0}          & 74                                    & Superato{} \\
-    \textit{Verbale Esterno 2020-12-18 v1.0.0}          & 77                                    & Superato{} \\
+    \textit{Verbale Interno 2021-01-10 v1.0.0}          & 70                                    & Superato{} \\
+    \textit{Verbale Esterno 2020-12-18 v1.0.0}          & 76                                    & Superato{} \\
 \end{longtable}
 \end{table}
 
