--- a/DocumentiEsterni/PianoDiQualifica/src/SpecificaDeiTest/src/TestDiIntegrazione/main.tex
+++ b/DocumentiEsterni/PianoDiQualifica/src/SpecificaDeiTest/src/TestDiIntegrazione/main.tex
@@ -1,1 +1,1 @@
-Questi test hanno lo scopo di ampliare man mano l’unità di codice testata, tramite integrazione di più unità già precedentemente verificate, in modo da combinare e testare sempre più parti del codice.
+Questi test hanno lo scopo di ampliare man mano l’unità di codice testata, tramite integrazione di più unità già precedentemente verificate, in modo da combinare e testare sempre più parti del codice. Verranno sviluppati in seguito quando sarà richiesta la loro istanziazione.
