--- a/DocumentiEsterni/PianoDiQualifica/src/SpecificaDeiTest/src/TestDiUnita/main.tex
+++ b/DocumentiEsterni/PianoDiQualifica/src/SpecificaDeiTest/src/TestDiUnita/main.tex
@@ -1,1 +1,1 @@
-Lo scopo di questi test è la verifica degli algoritmi scritti su appunto una unità di codice precedentemente scelta.
+Lo scopo di questi test è la verifica degli algoritmi scritti su appunto una unità di codice precedentemente scelta. Verranno sviluppati in seguito quando sarà richiesta la loro istanziazione.
