--- a/DocumentiEsterni/PianoDiQualifica/src/Autovalutazione/src/Valutazione_ruoli.tex
+++ b/DocumentiEsterni/PianoDiQualifica/src/Autovalutazione/src/Valutazione_ruoli.tex
@@ -10,11 +10,11 @@
     {\centering\textbf{Gravità}} & \textcolor{\secondaryColor}{\centering\textbf{Soluzione}}\\
    
     Rivestire il ruolo di \textit{Responsabile}  
-    &  Testo 
-    & 1  
-    & Testo . {} \\
+    &  A causa dell'inesperienza, chi ha lavorato come Responsabile ha avuto discrete difficoltà nella suddivisione bilanciata delle ore tra i membri provocando diverse ridistribuzioni delle ore.
+    & 2  
+    & Il gruppo ha deciso di dedicare del tempo per analizzare meglio la mole di lavoro e compiere così una distribuzione delle ore più accurata per evitare eventuali ritardi nelle consegne. {} \\
     Rivestire il ruolo di \textit{Analista}
-    & Difficolt\`{a} nell'individuazione dei casi d'uso che ha causato una sottostima del carico di lavoro degli analisti.
+    & Difficoltà nell'individuazione dei casi d'uso che ha causato una sottostima del carico di lavoro degli analisti.
     & 3
     & Aumentare il carico di lavoro e il numero degli analisti. \\
     \end{longtable}
