--- a/DocumentiInterni/Verbali/Verbale_I_2021-01-10/src/Comandi.tex
+++ b/DocumentiInterni/Verbali/Verbale_I_2021-01-10/src/Comandi.tex
@@ -12,4 +12,4 @@
 
 \newcommand{\Uso}{Interno}
 
-\newcommand{\DescrizioneDoc}{Riassunto dell'incontro del gruppo \Gruppo{} tenutosi il giorno 2021-01-10}
+\newcommand{\DescrizioneDoc}{Riassunto dell'incontro del gruppo \Gruppo{} tenutosi il giorno 2021-01-10.}
