--- a/DocumentiInterni/Verbali/Verbale_I_2021-01-10/src/DettaglioRiunione/main.tex
+++ b/DocumentiInterni/Verbali/Verbale_I_2021-01-10/src/DettaglioRiunione/main.tex
@@ -1,1 +1,1 @@
-La riunione è cominciata controllando alcuni documenti e fare eventuali modifiche in previsione della consegna. Infine Filippo ha fatto il merge dei documenti validati nel main (branch principale del gruppo in GitHUB) sotto la supervisione degli altri componenti del gruppo. Ci sono stati alcuni conflitti ma sono stati risolti velocemente. Infine il gruppo ha deciso di trovarsi il giorno dopo per creare la repository nella quale saranno aggiunti tutti i documenti necessari per la Revisione dei Requisiti con scadenza il giorno 2021-01-11 alle 17:00.
+La riunione è cominciata controllando alcuni documenti e fare eventuali modifiche in previsione della consegna. Infine \`{e} stato fatto il merge dei documenti validati nel main (branch principale del gruppo in GitHub) sotto la supervisione di tutti i componenti del gruppo. Ci sono stati alcuni conflitti ma sono stati risolti velocemente. Infine il gruppo ha deciso di trovarsi il giorno dopo per creare la repository nella quale saranno aggiunti tutti i documenti necessari per la Revisione dei Requisiti con scadenza il giorno 2021-01-11 alle 17:00.
